--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1834,7 +1834,7 @@ table {
 }
 
 .cell-wrapper.frontend-node hr{
-  height: 0.66em;
+  height: var(--cell-separator-height);
   padding: 0;
   margin: 0;
   cursor: vertical-text;
